# cortex-ui

./: .cursorrules  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  docker-entrypoint.sh  helm_template_output.yaml  index.html  index.yaml  llms.txt  nginx.conf  package-lock.json  package.json  project.toml  tsconfig.json
.github/workflows/: build.yml  helm-release.yml
backend/: .env.example  Procfile  database.py  interviewer_agent.py  introspect.py  introspect_clean.py  introspect_final.py  introspect_targeted.py  models.py  project.toml  pyproject.toml  requirements.txt  test_events.py  test_gql.py
backend/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
backend/baml_src/: bpmn_interview.baml  clients.baml  generators.baml  interviewer.baml
backend/sql/: 001_create_bpmn_catalog.sql
helm/cortex-ui/: Chart.yaml  values.yaml
helm/cortex-ui/templates/: configmap.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml
helm/process-spawner/: Chart.yaml  values.yaml
helm/process-spawner/templates/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml  secret.yaml
public/: config.js
src/: App.tsx  config.ts  index.css  main.tsx
src/api/: client.ts  types.ts
src/auth/: AuthProvider.tsx  RequireAuth.tsx
src/components/: Layout.tsx  UserMenu.tsx
src/components/HUD/: DataBindings.tsx  (+2 more)
src/hooks/: useAgent.ts  useCompileWorkflow.ts  useInterviewAgent.ts  useLiveBpmnGraph.ts  useMockAgent.ts  useMockWorkflowBuilder.ts
src/store/: useCanvasStore.ts  useInterviewStore.ts
(+21 files in other folders)
