[project]
name = "cortex-backend"
version = "1.0.0"
description = "The Cortex — Interviewer Agent API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "baml-py>=0.218.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
]

[project.scripts]
cortex = "interviewer_agent:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# Prevent setuptools from auto-discovering sql/, baml_src/, baml_client/ as packages
[tool.setuptools]
py-modules = ["interviewer_agent", "database", "models"]

[tool.setuptools.packages]
find = {exclude = ["sql", "baml_src", "baml_client"]}

